@@ -22,7 +22,7 @@
 //
 // Author: Chip Vincent (cvincent@us.ibm.com)
 //
-// Modified By:
+// Modified By: Yi Zhou (yi_zhou@hp.com)
 //
 //%/////////////////////////////////////////////////////////////////////////////
 
@@ -179,7 +179,7 @@ public:
 		const String& className,
 		ResponseHandler<CIMReference> & handler);
 
-	virtual void createInstance(
+	virtual CIMReference createInstance(
 		const OperationContext & context,
 		const String& nameSpace,
 		const CIMInstance& newInstance);
